# postgres

./: .appveyor.yml  .cirrus.star  .cirrus.tasks.yml  .cirrus.yml  .travis.yml  HACKING_NOTES  README  README.md  appveyor.yml  buildsetup.pl  client.c  configure  configure.ac  configure.in  dumpregr.pl  meson.build  meson_options.txt  repro.sql  windows_build_config.pl
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows-buildsetup.pl  ci-windows-dumpregr.pl  ci-windows.yml  ci.yml
config/: c-compiler.m4  llvm.m4
contrib/: Makefile
contrib/adminpack/: adminpack.c
contrib/amcheck/: verify_nbtree.c
contrib/auth_delay/: auth_delay.c
contrib/auto_explain/: auto_explain.c
contrib/bloom/: blcost.c  blinsert.c  bloom.h  blscan.c  blutils.c  blvacuum.c  blvalidate.c
contrib/dblink/: meson.build
contrib/dict_int/: dict_int.c
contrib/dict_xsyn/: dict_xsyn.c
contrib/file_fdw/: file_fdw.c
contrib/hstore/: hstore_io.c
contrib/intarray/: _int_selfuncs.c
contrib/isn/: EAN13.h  ISBN.h  ISMN.h  ISSN.h  UPC.h  isn.c  isn.h
contrib/oid2name/: meson.build
contrib/old_snapshot/: Makefile  old_snapshot--1.0.sql  time_mapping.c
contrib/pageinspect/: brinfuncs.c  fsmfuncs.c  ginfuncs.c  hashfuncs.c  heapfuncs.c  pageinspect.h  rawpage.c
contrib/passwordcheck/: passwordcheck.c
contrib/pg_buffercache/: Makefile  pg_buffercache--1.3--1.4.sql  (+1 more)
src/: Makefile.global.in  Makefile.shlib
src/backend/storage/page/: Makefile  bufpage.c  checksum.c  itemptr.c  meson.build
src/test/modules/encoding/: Makefile  meson.build
src/test/modules/encoding/expected/: cluster_catalog_encoding.out  cluster_encoding.out
src/test/modules/encoding/sql/: cluster_catalog_encoding.sql  cluster_encoding.sql
src/test/modules/test_sts/: Makefile  meson.build  test_sts--1.0.sql  test_sts.c  test_sts.control
src/test/modules/test_sts/sql/: test_sts.sql
src/test/python/: meson.build  requirements.txt
src/test/python/server/: conftest.py
(+1620 files in other folders)
